Fix no wrap if the shortlink URL is too long

--- a/templates/default/default.less
+++ b/templates/default/default.less
@@ -31,6 +31,10 @@ div.xlvo_shortlink {
   text-align:     center;
 
   vertical-align: middle;
+
+  /* Fix no wrap if the URL is too long */
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 div.xlvo_pin * {
